--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/multer": "^1.4.12",
+    "axios": "^1.8.4",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-oauth2-jwt-bearer": "^1.6.0",
     "express-validator": "^7.2.0",
+    "flutterwave-node-v3": "^1.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
